[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gymnasium-game-wrapper"
version = "0.1.0"
description = "A 2D collection-and-avoidance game wrapped as a Gymnasium-compatible RL environment with a YAML-driven difficulty schedule."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "gymnasium~=1.3.0",
    "numpy~=2.2.0",
    "PyYAML~=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest~=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["signal_collector*"]
